<resources>
    <string name="app_name">ReBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="home">home</string>
    <string name="recently_added">Recently Added</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="edit_button_label">Edit</string>
    <string name="add_button_label">Add</string>
    <string name="scan_button_label">Scan</string>
    <string name="show_book_button">Show</string>
    <string name="search_button_label">Search</string>
    <string name="logout_button_label">Logout</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_library">My Library</string>
    <string name="books">Books</string>
    <string name="search_books">Search Books</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="show_profile">Profile</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="user_email">E-mail</string>
    <string name="user_phone">Phone</string>
    <string name="user_location">Location</string>
    <string name="user_bio">Bio</string>
    <string name="user_profile_pic">Profile picture</string>
    <string name="save_button_label">Save</string>
    <string name="user_born_name">Name</string>
    <string name="required_fields">Required fields</string>
    <string name="extra_fields">Extra fields</string>
    <string name="edit_location"> Insert Your Position </string>
    <string name="feedback">Feedback</string>
    <string name="feedback_edit_text">Leave a feedback&#8230;</string>
    <string name="image_file_creation_error_title">Cannot take a picture</string>
    <string name="image_file_creation_error_message">
                Empty your phone storage and/or check this app\'s permissions
                in the Setting app.
            </string>
    <string name="book_ISBN">ISBN</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_edition_year">Edition Year</string>
    <string name="book_conditions">Conditions</string>
    <string name="sharing_user">Shared by: Username</string>
    <string name="books_map_button_label">Map</string>
    <string name="send_request">Request</string>
    <string name="chooser_activity_title">Sign In</string>
    <string name="label_google_sign_in">Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate.</string>
    <string name="label_facebook_login">Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate.</string>
    <string name="label_twitter_login">Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate.</string>
    <string name="label_emailpassword">Email/Password</string>
    <string name="desc_emailpassword">Use an email and password to authenticate.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate.</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="no_user_error_title">User no longer exists</string>
    <string name="no_user_error_message">
                This user might have deleted his/her account.
            </string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
    <string name="title_activity_show_chats_recycler">ShowChatsRecycler</string>
    <string name="title_activity_show_chat_recycler">ShowChatRecycler</string>
    <string name="borrowed">borrowed</string>
    <string name="request_book">pending</string>
    <string name="element_text">Element</string>
    <string name="chats_activity_title">Chats</string>
    <string name="open_chat">Open Chat</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="return_book">return book</string>
    <string name="check_if_return">got it back!</string>
    <string name="currency">rate</string>
    <string name="rated_added">rate added!</string>
    <string name="no_chats">No chats found</string>
    <string name="no_books">You don\'t have any books yet</string>
    <string name="no_requests">No requests found</string>
    <string name="no_borrowed">No books borrowed yet</string>
    <string name="application_logo">Application logo</string>
    <string name="request_by_me">Request by me</string>
    <string name="no_requests_found">No requests found</string>
</resources>