<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/view_profile"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/edit_profile"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/my_books"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_books" />
        <item
            android:id="@+id/search_books"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search_books" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

    <item android:title="Sign Out">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:icon="@android:drawable/presence_offline"
                android:title="Log out" />
        </menu>
    </item>

</menu>
