<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:hint="@string/user_email"
        android:layout_below="@+id/tabs"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_email"
        android:hint="@string/user_email"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_gravity="bottom"
        android:hint="@string/user_location"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/user_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_location"
        android:hint="@string/user_location"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_location"
        android:layout_gravity="bottom"
        android:hint="@string/user_bio"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/user_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_bio"
        android:hint="@string/user_bio"
        android:textSize="20sp" />

</RelativeLayout>
</ScrollView>
